* 使用weui做几个简单的页面

--- a/project.config.json
+++ b/project.config.json
@@ -4,10 +4,12 @@
     "urlCheck": true,
     "es6": false,
     "postcss": false,
-    "minified": false
+    "minified": false,
+    "newFeature": true
   },
   "compileType": "miniprogram",
   "appid": "wx17e090af81c3ef80",
   "projectname": "skyline_world",
-  "miniprogramRoot": "./dist"
+  "miniprogramRoot": "dist/",
+  "condition": {}
 }
